--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>홈</title>
 </head>
 <body>
-<h2><a href="/game">게임 시작</a></h2>
+<h2><a href="/game/start">게임 시작</a></h2>
 </body>
 </html>
